# CSI5155_2025_final_project

./: .gitignore  README.md  pyproject.toml
baseline/: README.md
baseline/non-ml/: apply_harris_test.py  harris_tuning_results_per_class.json  trace_bitmap_with_harris.py  tuning_harris.py
data_generation/: README.md  augment_dataset.py  generate_polygons.py
data_generation/clusterization/: cluster_shapes.py  clustering_summary.json  create_train_test_split.py  polygon_3_clustering.json  polygon_4_clustering.json  polygon_5_clustering.json  polygon_6_clustering.json  train_test_split.json
evaluation/: evaluate_classifier.py  evaluate_hausdorff.py  evaluate_mse.py  ground_truth_to_json.py
models/: classifier_model.pth  polygon_3_model.pth  polygon_4_model.pth  polygon_5_model.pth  polygon_6_model.pth
morningstar_scripts/: README.md  run_tuning_classifier.sbatch  run_tuning_polygon.sbatch
output/: baseline_test_set.json  ground_truth_test_set.json  predictions_with_classifier.json  predictions_without_classifier.json
training/: cnn_multi_model_polygon_output.ipynb  inference.ipynb
tuning/: config.py  main_tuning.py
tuning_v2/: classifier_config.py  polygon_config.py
util/: convert_points_to_svg.py  convert_svg_to_png.py
